tests/snapshots/snapshots__interpreter@list_ops.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/list_ops.pr
---
55
120
=> ()
