tests/snapshots/snapshots__interpreter@local_mono_combined.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/local_mono_combined.pr
---
985050
18
=> ()
