tests/snapshots/snapshots__interpreter@local_mono_effectful_helper.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/local_mono_effectful_helper.pr
---
3045
34
=> ()
