tests/snapshots/snapshots__interpreter@local_mono_multishot.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/local_mono_multishot.pr
---
2450
66
=> ()
