tests/snapshots/snapshots__interpreter@local_mono_nontail_resume.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/local_mono_nontail_resume.pr
---
2450
40
=> ()
